<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_C">C</string>
    <string name="_pha">()</string>
    <string name="_pt">^</string>
    <string name="_div">/</string>
    <string name="_plusorless">+/-</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_equal">=</string>
    <string name="_multiplication">*</string>
    <string name="_less">-</string>
    <string name="_plus">+</string>
    <string name="_valor">Ingrese un valor</string>
    <string name="_delete">DEL</string>
</resources>